complet-shop-page

--- a/product-06.html
+++ b/product-06.html
@@ -31,15 +31,44 @@
 </ul>
  </div>
  </div>
- <!--start home section --> 
-  <section id="home">
-   <div class="home-text">
-    <h3>hello world</h3>
-   </div>
+ <!--start pro-details section --> 
+  <div class="pro-details d-flex  justify-content-evenly">
+    <div class="pro-details-img  w-25">
+      <img src="imgs/New imgs/06.jpg" alt="">
     </div>
-</section>
+
+  <div class="pro-details-data d-flex align-items-center w-50">
+
+
+      <div class="pro-details-title w-50">
+      <h2>Manchester United </h2>
+      <H3>280 L.E</H3>
+       <p>polyester  material and cotton.</p>
+          <a href="https://wsend.co/201062341691">BUY NOW</a>
+      </div>
+
+
+       <div class="pro-details-text  w-50">
+         <table class="table">
+
+    <tr>
+      <th scope="row">0</th>
+      <td>materia :</td>
+      <td>price :</td>
+      <td>brand :</td>
+    </tr>
+     <tr>
+      <th scope="row">1</th>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+ 
+</table>
+       </div>
+</div>
   </div>
-   <!--end home section --> 
+   <!--end pro-details section --> 
 
 
  
