--- a/product-011.html
+++ b/product-011.html
@@ -9,25 +9,25 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Hattrick</title>
+   <title>HATTRICK</title>
 </head>
 <body>
   <!-- navbar section -->
  <div class="navbar navbar-1  ">
   <div class="nav-logo">
-    <h2>HATTRICK</h2>
+    <h2><a href="index.html">HATTRICK</a></h2>
   </div>
   <div class="nav-menu w-25 ">
     <ul class="d-flex justify-content-evenly">
 
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#">Shop</a></li>
     </ul>
   </div>
   <div class="nav-links ">
 <ul class="d-flex justify-content-evenly">
-  <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
-  <li><a href="#"><i class="fa-brands fa-square-whatsapp"></i></a></li>
+  <li><a href="index.html"><i class="fa-brands fa-square-facebook"></i></a></li>
+  <li><a href="index.html"><i class="fa-brands fa-square-whatsapp"></i></a></li>
 </ul>
  </div>
  </div>
