--- a/product-01.html
+++ b/product-01.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,67 +12,86 @@
     />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <title>Hattrick</title>
+    <link rel="stylesheet" href="css/main-nav.css" />
+    <title>HATTRICK</title>
   </head>
   <body>
-    <!-- navbar section -->
-    <div class="navbar navbar-1">
-      <div class="nav-logo">
-        <h2>HATTRICK</h2>
-      </div>
-      <div class="nav-menu w-25">
-        <ul class="d-flex justify-content-evenly">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Shop</a></li>
-        </ul>
-      </div>
-      <div class="nav-links">
-        <ul class="d-flex justify-content-evenly">
-          <li>
-            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa-brands fa-square-whatsapp"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div>
+ 
+     <div class="navbar-1">
+  <div class="nav-logo-1">
+    <h2><a href="index.html">HATTRICK</a></h2>
+  </div>
+  <div class="nav-menu-1">
+    <ul>
+      <li><a href="index.html">home</a></li>
+      <li><a href="#shop">shop</a></li>
+    </ul>
+  </div>
+  <div class="nav-icon-1">
+        <ul >
+            <li>
+              <a href="index.html"
+                ><i class="fa-brands fa-square-facebook"></i
+              ></a>
+            </li>
+            <li>
+              <a href="index.html"
+                ><i class="fa-brands fa-square-whatsapp"></i
+              ></a>
+            </li>
+          </ul>
+  </div>
+
+  <div class="nav-list-1">
+    <i class="fa-regular fa-chart-bar"></i>
+        <ul>
+      <li><a href="index.html">home</a></li> 
+      <li><a href="#shop">shop</a></li>
+    </ul>
+  </div>
+</div>
+ 
+
+   
+
     <!--start pro-details section -->
-    <div class="pro-details d-flex justify-content-evenly">
+    <!-- <div class="pro-details d-flex justify-content-evenly">
       <div class="pro-details-img w-25">
         <img src="imgs/New imgs/01.jpg" alt="" />
       </div>
       <div class="pro-details-data d-flex align-items-center w-50">
         <div class="pro-details-title w-30">
-          <h2>*	Al Ahly *</h2>
+          <h2>* Al Ahly *</h2>
           <h3>280 L.E</h3>
-          <p>polyester  material and cotton.</p>
+          <p>
+            ⚽ Football T-Shirt – Modern Design for True Football Fans<br />
+            <span>
+              Its sporty and stylish design reflects the spirit of the game,
+              whether you’re on the pitch or hanging out with friends.
+              Lightweight fabric, excellent breathability, and colors that stay
+              vibrant even after washing – so you’re always ready for the next
+              match.</span
+            >
+          </p>
           <a href="https://wsend.co/201062341691">BUY NOW</a>
         </div>
-        <div class="pro-details-text w-40">
-        <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">materia</th>
-      <th scope="col">price</th>
-      <th scope="col">brand</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-  
-  </tbody>
-</table>
+        <div class="pro-details-text w-20">
+          <table class="table">
+            <tr>
+              <td>materia : soft cotton fabric with polyester .</td>
+            </tr>
+
+            <tr>
+              <td>price : 280 L.E</td>
+            </tr>
+            <tr>
+              <td>brand : HATTRICK</td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
-    <!--end pro-details section -->
+    end pro-details section -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
