--- a/product-01.html
+++ b/product-01.html
@@ -55,7 +55,7 @@
    
 
     <!--start pro-details section -->
-    <!-- <div class="pro-details d-flex justify-content-evenly">
+    <div class="pro-details d-flex justify-content-evenly">
       <div class="pro-details-img w-25">
         <img src="imgs/New imgs/01.jpg" alt="" />
       </div>
