--- a/product-02.html
+++ b/product-02.html
@@ -41,7 +41,7 @@
 
 
       <div class="pro-details-title w-50">
-      <h2>Arsenal </h2>
+      <h2>* Arsenal *</h2>
       <H3>280 L.E</H3>
        <p>polyester  material and cotton.</p>
           <a href="https://wsend.co/201062341691">BUY NOW</a>
