--- a/index.html
+++ b/index.html
@@ -1,54 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/shop.css" />
     <title>HATTRICK</title>
-</head>
-<body>
-  <!-- navbar section -->
- <div class="navbar navbar-1">
-  <div class="nav-logo">
-    <h2><a href="index.html">HATTRICK</a></h2>
-  </div>
-  <div class="nav-menu w-25 ">
-    <ul class="d-flex justify-content-evenly">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-black navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">HATTRICK</a>
 
-      <li><a href="index.html">Home</a></li>
-      <li><a href="#">Shop</a></li>
-    </ul>
-  </div>
-  <div class="nav-links ">
-<ul class="d-flex justify-content-evenly">
-  <li><a href="index.html"><i class="fa-brands fa-square-facebook"></i></a></li>
-  <li><a href="index.html"><i class="fa-brands fa-square-whatsapp"></i></a></li>
-</ul>
- </div>
- </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#HOME">Home</a>
+            </li>
 
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="index.html"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Our products
+              </a>
 
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#SHOP">SHOP</a></li>
+                <li><a class="dropdown-item" href="#">Contact Us</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#">become a seller</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
- 
- <!--start home section --> 
-  <section id="home">
-   <div class="home-text">
-    <h3>hello world</h3>
-   </div>
-    </div>
-</section>
-  </div>
-   <!--end home section --> 
+    <section id="HOME">
+      <div class="layer">
+        <h1>BEST SPORT T-SHERT</h1>
+      </div>
+     </section>
 
+    <h2 class="text-center m-5 fs-1">shop</h2>
+    <section id="SHOP">
+      <div class="container">
+        <div class="row gy-3">
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card text-center">
+              <img src="imgs/New imgs/01.jpg" alt="" />
+              <h2>* Al Ahly *</h2>
 
- 
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black">
+                <a href="product-01.html">SHOW MORE</a>
+              </button>
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/02.jpg" alt="" />
+              <h2>* Arsenal *</h2>
 
-   <script src="js/bootstrap.bundle.min.js"></script>
-</body>
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-02.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/03.jpg" alt="" />
+              <h2>real madrid</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-03.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/04.jpg" alt="" />
+              <h2>* Manchester United *</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-04.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="p-3"></div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/05.jpg" alt="" />
+              <h2>* Manchester city*</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-05.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/06.jpg" alt="" />
+              <h2>* Manchester United*</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-06.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/07.jpg" alt="" />
+              <h2>* Arsenal *</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-07.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/08.jpg" alt="" />
+              <h2>* Arsenal *</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-08.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="p-3"></div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/09.jpg" alt="" />
+              <h2>* Arsenal *</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-09.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/010.jpg" alt="" />
+              <h2>* Germany *<span> -- Die Mannschaft</span></h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-010.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/011.jpg" alt="" />
+              <h2>* real madrid *</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-011.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/012.jpg" alt="" />
+              <h2>* real madrid *</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-012.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="p-3"></div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/013.jpg" alt="" />
+              <h2>* Manchester city *</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-013.html">SHOW MORE</a></button>
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-6 col-lg-3">
+            <div class="card">
+              <img src="imgs/New imgs/014.jpg" alt="" />
+              <h2>* real madrid *</h2>
+
+              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3>280 L.E</h3>
+              <button class="btn bg-black"><a href="product-014.html">SHOW MORE</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
