--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/shop.css" />
     <title>HATTRICK</title>
+      <link rel="icon" type="image/x-icon" href="imgs/New imgs/01.jpg">
+ 
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-black navbar-dark">
