--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       </div>
      </section>
 
-    <h2 class="text-center m-5 fs-1">shop</h2>
     <section id="SHOP">
+    <h2 class="text-center m-5 fs-1">--shop--</h2>
       <div class="container">
         <div class="row gy-3">
           <div class="col-sm-10 col-md-6 col-lg-3">
@@ -77,8 +77,8 @@
               <img src="imgs/New imgs/01.jpg" alt="" />
               <h2>* Al Ahly *</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
-              <h3>280 L.E</h3>
+              <p> Football T-Shirt – Modern Design for True Football Fans</p>
+              <h3 class="text-danger">280 L.E</h3>
               <button class="btn bg-black">
                 <a href="product-01.html">SHOW MORE</a>
               </button>
@@ -89,7 +89,7 @@
               <img src="imgs/New imgs/02.jpg" alt="" />
               <h2>* Arsenal *</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p> Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-02.html">SHOW MORE</a></button>
             </div>
@@ -99,7 +99,7 @@
               <img src="imgs/New imgs/03.jpg" alt="" />
               <h2>real madrid</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p> Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-03.html">SHOW MORE</a></button>
             </div>
@@ -109,7 +109,7 @@
               <img src="imgs/New imgs/04.jpg" alt="" />
               <h2>* Manchester United *</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p> Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-04.html">SHOW MORE</a></button>
             </div>
@@ -120,7 +120,7 @@
               <img src="imgs/New imgs/05.jpg" alt="" />
               <h2>* Manchester city*</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p>Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-05.html">SHOW MORE</a></button>
             </div>
@@ -140,7 +140,7 @@
               <img src="imgs/New imgs/07.jpg" alt="" />
               <h2>* Arsenal *</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p>Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-07.html">SHOW MORE</a></button>
             </div>
@@ -161,7 +161,7 @@
               <img src="imgs/New imgs/09.jpg" alt="" />
               <h2>* Arsenal *</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p>Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-09.html">SHOW MORE</a></button>
             </div>
@@ -171,7 +171,7 @@
               <img src="imgs/New imgs/010.jpg" alt="" />
               <h2>* Germany *<span> -- Die Mannschaft</span></h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p> Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-010.html">SHOW MORE</a></button>
             </div>
@@ -181,7 +181,7 @@
               <img src="imgs/New imgs/011.jpg" alt="" />
               <h2>* real madrid *</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p> Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-011.html">SHOW MORE</a></button>
             </div>
@@ -191,7 +191,7 @@
               <img src="imgs/New imgs/012.jpg" alt="" />
               <h2>* real madrid *</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p> Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-012.html">SHOW MORE</a></button>
             </div>
@@ -202,7 +202,7 @@
               <img src="imgs/New imgs/013.jpg" alt="" />
               <h2>* Manchester city *</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p> Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-013.html">SHOW MORE</a></button>
             </div>
@@ -212,7 +212,7 @@
               <img src="imgs/New imgs/014.jpg" alt="" />
               <h2>* real madrid *</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p>Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-014.html">SHOW MORE</a></button>
             </div>
