--- a/product-01.html
+++ b/product-01.html
@@ -68,7 +68,7 @@
           <h2>* Al Ahly *</h2>
           <h3>280 L.E</h3>
           <p>
-            ⚽ Football T-Shirt – Modern Design for True Football Fans<br />
+            Football T-Shirt – Modern Design for True Football Fans<br />
             <span>
               Its sporty and stylish design reflects the spirit of the game,
               whether you’re on the pitch or hanging out with friends.
@@ -87,14 +87,21 @@
             <div class="pro-details-title">
           <table class="table table-1">
             <tr>
-              <td>materia : soft cotton fabric with polyester .</td>
+              <td>materia : </td>
+              <td>soft cotton fabric with polyester .</td>
             </tr>
 
             <tr>
-              <td>price : 280 L.E</td>
+              <td>price : </td>
+              <td>280 L.E</td>
             </tr>
             <tr>
-              <td>brand : HATTRICK</td>
+              <td>brand :</td>
+              <td> HATTRICK</td>
+            </tr>
+            <tr>
+              <td>Shipping :</td>
+              <td> 80 L.E</td>
             </tr>
           </table>
         </div>
