--- a/product-010.html
+++ b/product-010.html
@@ -63,13 +63,13 @@
   <div class="container">
     <div class="row">
       <div class="col-1"></div>
-      <div class="col-4">
+      <div class="col-sm-10 clo-md-8 col-lg-4">
         <div class="card-2">
         <img src="imgs/New imgs/010.jpg " alt="">
       </div>
       </div>
       <div class="col-1"></div>
-      <div class="col-5">
+      <div class="col-sm-10 col-md-8 col-lg-5">
         <div class="data">
          <h2>*Germany*<span> * Die Mannschaft</span>  </h2>
            <h3>280 L.E</h3>
