--- a/product-05.html
+++ b/product-05.html
@@ -63,13 +63,44 @@
   <div class="container">
     <div class="row">
       <div class="col-1"></div>
-      <div class="col-4">
+      <div class="col-sm-10 clo-md-8 col-lg-4">
         <div class="card-2">
-        <img src="imgs/New imgs/05.jpg " alt="">
+       
+
+
+           <div id="carouselExampleIndicators" class="carousel slide ">
+  <div class="carousel-indicators  ">
+    <button type="button " data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button " data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2" ></button>
+   
+  </div>
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="imgs/New imgs/05.jpg" class="d-block w-100" alt="Arsenal">
+    </div>
+      <div class="carousel-item ">
+      <img src="imgs/New imgs/013.jpg" class="d-block w-100" alt="Arsenal">
+    </div>
+
+   
+  </div>
+
+  <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+
+  <button class="carousel-control-next " type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden ">Next</span>
+  </button>
+</div>
+
       </div>
       </div>
       <div class="col-1"></div>
-      <div class="col-5">
+      <div class="col-sm-10 col-md-8 col-lg-5">
         <div class="data">
       <h2>* Manchester city *</h2>
           <h3>280 L.E</h3>
