--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <img src="imgs/New imgs/06.jpg" alt="" />
               <h2>* Manchester United*</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p> Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-06.html">SHOW MORE</a></button>
             </div>
@@ -150,7 +150,7 @@
               <img src="imgs/New imgs/08.jpg" alt="" />
               <h2>* Arsenal *</h2>
 
-              <p>⚽ Football T-Shirt – Modern Design for True Football Fans</p>
+              <p> Football T-Shirt – Modern Design for True Football Fans</p>
               <h3>280 L.E</h3>
               <button class="btn bg-black"><a href="product-08.html">SHOW MORE</a></button>
             </div>
