--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/shop.css" />
+     <link rel="stylesheet" href="css/main-nav.css">
+
     <title>HATTRICK</title>
       <link rel="icon" type="image/x-icon" href="imgs/New imgs/01.jpg">
  
@@ -52,7 +54,7 @@
 
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#SHOP">SHOP</a></li>
-                <li><a class="dropdown-item" href="#">Contact Us</a></li>
+                <li><a class="dropdown-item" href="contact.html">Contact Us</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="#">become a seller</a></li>
               </ul>
