--- a/product-03.html
+++ b/product-03.html
@@ -40,7 +40,7 @@
 
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="index.html#SHOP">SHOP</a></li>
-            <li><a class="dropdown-item" href="index.html">Contact Us</a></li>
+            <li><a class="dropdown-item" href="contact.html">Contact Us</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="index.html">become a seller</a></li>
           </ul>
@@ -75,18 +75,18 @@
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="imgs/New imgs/03.jpg" class="d-block w-100" alt="Arsenal">
+      <img src="imgs/New imgs/03.jpg" class="d-block w-100" alt="">
     </div>
       <div class="carousel-item ">
-      <img src="imgs/New imgs/011.jpg" class="d-block w-100" alt="Arsenal">
+      <img src="imgs/New imgs/011.jpg" class="d-block w-100" alt="">
     </div>
 
     <div class="carousel-item ">
-      <img src="imgs/New imgs/012.jpg" class="d-block w-100" alt="Arsenal">
+      <img src="imgs/New imgs/012.jpg" class="d-block w-100" alt="">
     </div>
 
     <div class="carousel-item ">
-      <img src="imgs/New imgs/014.jpg" class="d-block w-100" alt="Arsenal">
+      <img src="imgs/New imgs/014.jpg" class="d-block w-100" alt="">
     </div>
   </div>
 
