--- a/product-05.html
+++ b/product-05.html
@@ -40,7 +40,7 @@
 
           <ul class="dropdown-menu">
              <li><a class="dropdown-item" href="index.html#SHOP">SHOP</a></li>
-            <li><a class="dropdown-item" href="index.html">Contact Us</a></li>
+            <li><a class="dropdown-item" href="contact.html">Contact Us</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="index.html">become a seller</a></li>
           </ul>
