size of all pro

--- a/product-01.html
+++ b/product-01.html
@@ -57,7 +57,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1"></div>
-      <div class="col-sm-10 clo-md-8 col-lg-4">
+      <div class="col-sm-9 clo-md-7 col-lg-3">
         <div class="card-2">
         <img src="imgs/New imgs/01.jpg " alt="">
       </div>
@@ -71,10 +71,9 @@
             Football T-Shirt – Modern Design for True Football Fans<br />
             <span>
               Its sporty and stylish design reflects the spirit of the game,
-              whether you’re on the pitch or hanging out with friends.
               Lightweight fabric, excellent breathability, and colors that stay
-              vibrant even after washing – so you’re always ready for the next
-              match.</span>
+              vibrant even after washing 
+            .</span>
           </p>
       
       </div>
