--- a/product-014.html
+++ b/product-014.html
@@ -114,10 +114,9 @@
              Football T-Shirt – Modern Design for True Football Fans<br />
             <span>
               Its sporty and stylish design reflects the spirit of the game,
-              whether you’re on the pitch or hanging out with friends.
               Lightweight fabric, excellent breathability, and colors that stay
-              vibrant even after washing – so you’re always ready for the next
-              match.</span>
+              vibrant even after washing 
+            .</span>
           </p>
       
       </div>
