--- a/product-012.html
+++ b/product-012.html
@@ -114,12 +114,12 @@
           <h3>280 L.E</h3>
           <p>
             Football T-Shirt – Modern Design for True Football Fans<br />
-            <span>
+            
+         <span>
               Its sporty and stylish design reflects the spirit of the game,
-              whether you’re on the pitch or hanging out with friends.
               Lightweight fabric, excellent breathability, and colors that stay
-              vibrant even after washing – so you’re always ready for the next
-              match.</span>
+              vibrant even after washing 
+            .</span>
           </p>
       
       </div>
